--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Productos</title>
+    <title>FiguStore - Backend</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    {{{body}}}
+    <main class="container">
+        {{{body}}}
+    </main>
 </body>
 </html>
